Fixing permissions and make body-> overflow: hidden

--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 body {
   box-sizing: border-box;
   background-color: #dd5cb280;
+  overflow-x: hidden;
 }
 
 #cursor {
